# GTaxoGym

./: .gitignore  LICENSE  README.md  clean_results.sh  gather_results.py  main.py  requirements.txt  setup.cfg
agg_results/: classical_graph_properties.csv  graph_cheb_results.json  graph_gatedgcn_results.json  graph_gcn2_results.json  graph_gcn_results.json  graph_gin_results.json  graph_gin_small_results.json  node_gcn_results.json  node_gcn_v2_results.json  node_gcn_v2_wfb_results.json  node_results.json
configs/: node_default.yaml  node_gcn.yaml  node_gcn_v2.yaml
configs/graph/: default_cheb.yaml  default_gat.yaml  default_gatedgcn.yaml  default_gatv2.yaml  default_gcn.yaml  default_gcn2.yaml  default_gin.yaml  default_gin_small.yaml  default_resgatedgcn.yaml
gtaxogym/: __init__.py  logger.py  metric.py  metrics_ogb.py  utils.py
gtaxogym/config/: defaults_config.py  layer_config.py  nx_config.py  optimizers_config.py  perturbation_config.py  split_config.py  (+1 more)
tests/: README.md  graph_pert_enzymes.sh  graph_pert_nci1.sh  graph_run.sh  node_all_random_split.sh  node_all_standard_split.sh  node_amazon.sh  node_arxiv.sh  node_citeseer.sh  node_cora.sh  node_flickr.sh  node_gdro.sh  node_pert_chameleon.sh  node_pert_cora.sh  node_pert_pubmed.sh  node_wikics.sh
unittests/: test_fast_auroc_multi.py  test_wavelet_bank_filtering.py
viz/: compare_hyps.ipynb  comparisons.py  correlations.ipynb  generate_graphtask_classicprop_plots.ipynb  generate_graphtask_plots.ipynb  generate_nodetask_plots.ipynb  generate_perturbation_plots.py  plotting.py  visualize_bandpass.ipynb
(+80 files in other folders)
