[metadata]
name = gtaxogym
version = 0.0.1-dev
description = Graph Taxonomy Gym
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/G-Taxonomy-Workgroup/GTaxoGym

[options]
install_requires =
    deepsnap
    numba
    numpy
    ogb
    pandas
    rdflib
    scikit-learn
    scipy
    tensorboardX
    torch_geometric>=2.0.4
    wandb

zip_save = false
include_package_data = true
python_requires = >=3.6

packages = find:
